# thinking-llms-interp

./: .gitignore  README.md  analyze_layer_effects.py  bias_vector_interp_results.json  classify_traces_alternative.py  compare_reasoning.py  cosine_sim.py  environment.yaml  evaluate_reasoning_with_classifier.py  evaluate_steering.py  evaluate_vectors.py  grade_responses.py  label_traces.py  mean_vectors.pt  mean_vectors_deepseek-r1-distill-llama-8b.pt  multi_model_pipeline.py  pyproject.toml  run.sh  run2.sh  run3.sh  run_sae.sh  setup.py  train_vectors.py  utils.py
.claude/: settings.local.json
__pycache__/: utils.cpython-310.pyc~Stashed changes
analysis_files/: analyze_differential_counts.py  analyze_error_types.py  analyze_taxonomy_stats.py  analyze_taxonomy_stats_white_box.py  analyze_traces_state_transition.py  compare_correct_vs_incorrect_aggregate.py  compare_correct_vs_incorrect_aggregate_analysis_runs.py  compare_correct_vs_incorrect_aggregate_white_box.py  compare_models_visualization.py  compare_models_visualization_analysis_runs.py  compare_models_visualization_white_box.py  compare_white_black_labeling.py  run_combined_analysis.py  run_global_aggregate_analysis.py  run_global_aggregate_white_box.py  run_multi_model_analysis.py  run_per_model_analysis_runs.py  run_per_model_white_box.py
compare-base-reasoning/: compare_reasoning.py  run.sh
cot_interp.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
data/: answer_tasks.json  base_responses_deepseek-r1-distill-llama-8b.json  base_responses_gpt-4o.json  reasoning_tokens_forcing_deepseek-r1-distill-qwen-14b_qwen2.5-14b.json  tasks.json
deepseek_steering/: messages.py  open_router_utils.py  running_mean.py  task_messages.py  utils.py
generate-responses/: analyze_transitions.py  annotate_thinking.py  coefficient_sweep.py  compare_intervention_results.py  example_coefficient_sweep.sh  example_sae_vector_sweep.sh  generate_responses.py  generate_responses_with_steering.py  generate_with_intervention.py  run.sh  run_annotation.sh  run_intervention_experiment.sh  run_steering_experiments.sh  text_mining_analysis.py  text_mining_analysis_correct.py  train_and_sweep_sae_vectors.py
hybrid/: bias_vector_interp.py  evaluate_hybrid.py  hybrid_model.py  hybrid_sentence.py  hybrid_token.py  hybrid_word.py  interactive_hybrid_model.py  interactive_hybrid_sentence.py  most_important_vectors.py  re_evalate_answers_rolling.py  run.sh  run_llama_8b.sh  run_qwen_1.5b.sh  run_qwen_14b.sh  run_qwen_32b_on_qwq.sh  run_qwen_32b_only_bias.sh  run_qwen_32b_random_firing.sh  train_probes.py  viz.py
hybrid-2/: hybrid_token.py  run_llama_8b.sh  run_qwen_1.5b.sh  run_qwen_14b.sh  run_qwen_32b_on_deepseek.sh  run_qwen_32b_on_qwq.sh  run_qwen_32b_random_vectors.sh
messages/: messages.py
notebooks/: base_vs_thinking_heatmaps.py  behaviors_per_category.py  force_reasoning_tokens_exp.py  kl_div_analysis.py  reasoning_tokens_forcing.py
pipelines/: run_sae_feature_pipeline.py
scripts/: annotate_responses.py  gen_answer_tasks.py  gen_base_responses.py  gen_openai_base_responses.py  gen_tasks.py  plot_step_label_percent_vs_accuracy.py  plot_umap_medprm_steps.py
steering/: coefficient_study.py  evaluate_MATH.py  evaluate_steering.py  evaluate_vectors.py  interactive_sae_steering.py  run.sh  run_math_eval.sh
train-saes/: README.md  ablate_clustering.py  add_examples.py  appendix_tables.py  evaluate_clustering.py  evaluate_trained_clustering.py  generate_activations.py  generate_titles_trained_clustering.py  interactive_cluster_evaluation.py  run.sh  (+6 more)
(+1049 files in other folders)
